--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     </header>   
     <section id=about>
         <div class="container">
-            <img class="store-front" src="/Images/Loja-1.png" alt="Fachada da Loja Hype Store">
+            <img class="store-front" src="/images/Loja-1.png" alt="Fachada da Loja Hype Store">
             <div>
                 <h2>Sobre a Loja</h2>
                 <p>A Hype Store é muito mais do que uma loja de roupas; é um verdadeiro ponto de encontro para os apaixonados pela cultura urbana e o estilo streetwear. Localizada no coração da cidade, a Hype Store se destaca por oferecer uma seleção exclusiva de peças que representam o que há de mais inovador e autêntico na moda das ruas.</p>
