--- a/index.html
+++ b/index.html
@@ -34,10 +34,10 @@
                 <p>A Hype Store é muito mais do que uma loja de roupas; é um verdadeiro ponto de encontro para os apaixonados pela cultura urbana e o estilo streetwear. Localizada no coração da cidade, a Hype Store se destaca por oferecer uma seleção exclusiva de peças que representam o que há de mais inovador e autêntico na moda das ruas.</p>
                 <p>Nossa missão é trazer o melhor do streetwear global para você, com marcas icônicas e designers emergentes que estão redefinindo as tendências. Cada produto na Hype Store é escolhido com atenção aos detalhes, garantindo que você encontre desde camisetas e hoodies com designs únicos até acessórios que elevam seu estilo.</p>
                 <ul class="brands-list">
-                    <li><img src="/Images/logo_adidas.png" alt="Logo da logo_adidas"></li>
-                    <li><img src="/Images/logo_bepe.png" alt="Logo da Bape"></li>
-                    <li><img src="/Images/logo_nike.png" alt="Logo do Nike"></li>
-                    <li><img src="/Images/logo_supreme.png" alt="Logo do Supreme"></li>
+                    <li><img src="/images/logo_adidas.png" alt="Logo da logo_adidas"></li>
+                    <li><img src="/images/logo_bepe.png" alt="Logo da Bape"></li>
+                    <li><img src="/images/logo_nike.png" alt="Logo do Nike"></li>
+                    <li><img src="/images/logo_supreme.png" alt="Logo do Supreme"></li>
                 </ul>
             </div>
         </div>
@@ -61,17 +61,17 @@
                     <ul class="social-links">
                         <li>
                             <a href="#" title="Siga nos no Instagram">
-                                <img src="/Images/instagram.png" alt="Logo do Instagram">
+                                <img src="/images/instagram.png" alt="Logo do Instagram">
                             </a>
                         </li>
                         <li>
                             <a href="#" title="Siga nos no Facebook">
-                                <img src="/Images/facebook.png" alt="Logo do Facebook">
+                                <img src="/images/facebook.png" alt="Logo do Facebook">
                             </a>
                         </li>
                         <li>
                             <a href="#" title="Inscreva-se no nosso canal do YouTube">
-                                <img src="/Images/youtube.png" alt="Logo do YouTube">
+                                <img src="/images/youtube.png" alt="Logo do YouTube">
                         </a>
                         </li>
                     </ul>
